<resources>
    <string name="app_name">Project plan</string>
    <string name="home_title">Project plan</string>
    <string name="task_name">TASK NAME</string>
    <string name="search">Search…</string>
    <string name="assignee">Assignee</string>
    <string name="startdate">Start date</string>
    <string name="estimate_day">Estimate day</string>
    <string name="end_date">End date</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="chart">Chart</string>
    <string name="back">back</string>
    <string name="add">Add</string>
    <string name="task_name_create">Task Name</string>
    <string name="assignee_create">Assignee</string>
    <string name="estimateday_create">Estimate Day</string>
    <string name="startdate_create">Start Date</string>
    <string name="enddate_create">End Date</string>
    <string name="ex_order_list">ex: Order list,..</string>
    <string name="ex_kaushik">ex: kaushik,..</string>
    <string name="ex_5">ex: 5,..</string>
    <string name="confirm">CONFIRM</string>
    <string name="ex_yyyy_mm_dd">ex: yyyy/MM/dd</string>
    <string name="task">Task</string>
    <string name="assigndev">Assign Dev</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="calendar_enddate">calendar endDate</string>
    <string name="calendar_startdate">Calendar startDate</string>
    <string name="itemselection_assignee">ItemSelection_Assignee</string>
    <string name="itemslection_taskname">ItemSlection taskName</string>
    <string name="item_spinner">item_spinner</string>
    <string name="warning">Warning!</string>
    <string name="content">content</string>
    <string name="done">DONE</string>
    <string name="warningg">warning</string>
    <string name="ok">OK</string>
    <string name="question">Alert!</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="fab">fab</string>
    <string name="turn_on_off_estimate_day">Hide/Display Estimate Day</string>
    <string name="turn_on_off_music">Turn off/on Music</string>
    <string name="cancel_button">cancel button</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_the_task">Are you sure you want to delete the task?</string>
    <string name="gantt_chart">Project Plan</string>
    <string name="exit_btn">Exit button</string>
    <string name="from_date">From:</string>
    <string name="calendar_fromdate">From date</string>
    <string name="to_date">To:</string>
    <string name="filter">Filter</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="sort">Sort</string>
    <string name="menu_gantt_chart">Gantt</string>
    <string name="click_text_warning">Choose calendar icon \nto input date</string>
    <string name="causes_an_overlap_to_other_tasks_when_updating_at">" causes an overlap to other tasks when updating at "</string>
    <string name="is_required">" is required!"</string>
    <string name="no_data_found">No data found</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_tasks">Are you sure you want to delete the selected tasks?</string>
    <string name="delete_task">Delete task</string>
    <string name="failed_to_delete_task">Failed to delete task</string>
    <string name="failed_to_updated_task">Failed to updated task</string>
    <string name="failed_to_create_task_2">Failed to create task(2)</string>
    <string name="failed_to_create_task_1">Failed to create task(1)</string>
    <string name="task_name_already_exists_in_the_list">Task name already exists in the list</string>
    <string name="an_error_occurred_while_loading_data">An error occurred while loading data</string>
    <string name="null_date_or_can_t_parse_date">Null date or can\'t parse date</string>
    <string name="invalid_date">Invalid date</string>
    />
</resources>