<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_layout"
    android:background="@drawable/ic_dialogbg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="97dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
             >

            <ImageView
                android:id="@+id/draggle_image"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_round_remove_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/createTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="238dp"
                    android:padding="8dp"
                    android:paddingStart="@dimen/_10dp"
                    android:text="@string/create"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/cancelButton"
                    android:layout_width="54dp"
                    android:layout_height="43dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_baseline_clear_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_taskName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_TaskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name_create"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/create_taskName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_custom_create_edittext"
                    android:hint="@string/ex_order_list"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="#868687" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_assignee"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_Asssigee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assignee_create"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/create_assignee"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_custom_create_edittext"
                    android:hint="@string/ex_kaushik"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="#868687" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_startdate"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startdate_create"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <EditText
                        android:id="@+id/create_startDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_custom_create_edittext"
                        android:enabled="false"
                        android:hint="@string/ex_yyyy_mm_dd"
                        android:inputType="text"
                        android:paddingStart="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="#868687"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_create_StartDate"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageButton
                        android:id="@+id/btn_create_StartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/calendar_startdate"
                        app:srcCompat="@drawable/calendar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_endDate"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enddate_create"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/create_EndDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_custom_create_edittext"
                        android:enabled="false"
                        android:hint="@string/ex_yyyy_mm_dd"
                        android:inputType="text"
                        android:paddingStart="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="#868687"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_create_EndDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/btn_create_EndDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/calendar_startdate"
                        app:srcCompat="@drawable/calendar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_estimaday"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_estimateDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimateday_create"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/create_estimateday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_custom_create_edittext"
                    android:hint="@string/ex_5"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="#868687" />

            </LinearLayout>

            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/lavender"
                android:text="@string/confirm"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>